k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx
spec:
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
